# threadx-experiments

./: .gitmodules  README.md  build.sh  criticalup.toml  describe.sh
.github/workflows/: build-ferrocene.yml  build.yml  clippy.yml  format.yml  reuse.yml
demo-app/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
demo-app/.cargo/: config.toml
demo-app/src/: main.rs  tx_low_level.S
nrf52-app/: Cargo.toml  README.md  memory.x
nrf52-app/.cargo/: config.toml
nrf52-app/src/: main.rs  tx_low_level.S
qemu-cortex-r5-app/: .gitignore  Cargo.lock.license  Cargo.toml  README.md  build.rs  commands.gdb  linker.ld  mps3-an536.ld  qemu_run  qemu_run.bat  qemu_run.cmd  qemu_run.sh  versatileab.ld
qemu-cortex-r5-app/.cargo/: config.toml
qemu-cortex-r5-app/src/: lib.rs  main.rs  pl011_uart.rs  pl190_vic.rs  sp804_timer.rs  tx_initialize_low_level.S  virt_uart.rs
threadx-sys/: .gitignore  Cargo.lock.license  Cargo.toml  README.md  build.rs  wrapper.h
threadx-sys/include/: stdlib.h  string.h
threadx-sys/src/: lib.rs
