# SPDX-FileCopyrightText: Copyright (c) 2023 Ferrous Systems
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "demo-app"
version = "0.0.0"
description = "Rust ThreadX demo on nRF52840"

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
nrf52840-hal = "0.16"
heapless = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4"
threadx-sys = { path = "../threadx-sys" }
byte-strings = "0.3.1"

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

[build-dependencies]
cc = "1.0.83"

