[package]
name = "qemu-cortex-r5-app"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "A simple ARMv7-R demo application that runs ThreadX in QEMU and compiles with Ferrocene"

[dependencies]
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
embedded-alloc = "0.5.1"
static_cell = "2.1.0"
threadx-sys = { path = "../threadx-sys" }
byte-strings = "0.3.1"

[profile.release]
opt-level = "s"

[build-dependencies]
cc = "1.1.6"
